サブタイトルを追加

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <body>
     <div class="container">
       <h1>シンプル家計簿</h1>
-
+      <h2>家計簿をつけて節約</h2>
       <div class="summary-container">
         <div class="summary-box income">
           <h2>収入合計</h2>
