収入合計と支出合計を収入計と支出計に変更

--- a/index.html
+++ b/index.html
@@ -12,11 +12,11 @@
       <h2>家計簿をつけましょう</h2>
       <div class="summary-container">
         <div class="summary-box income">
-          <h2>収入合計</h2>
+          <h2>収入計</h2>
           <p id="total-income">0円</p>
         </div>
         <div class="summary-box expense">
-          <h2>支出合計</h2>
+          <h2>支出計</h2>
           <p id="total-expense">0円</p>
         </div>
         <div class="summary-box balance">
