収支登録ボタンの文言を変更

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
       </div>
 
       <div class="button-container">
-        <a href="input.html" class="add-button">収支を登録する</a>
+        <a href="input.html" class="add-button">収支の登録</a>
       </div>
 
       <div class="history-container">
